Fix overflow issue with profile page.

--- a/app/assets/stylesheets/show-page.scss
+++ b/app/assets/stylesheets/show-page.scss
@@ -4,8 +4,8 @@
   background: #fff;
 
   header {
-    height: 260px;
-    // overflow: hidden;
+    max-height: 260px;
+    overflow: hidden;
     position: relative;
     font: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Garuda,Verdana,Tahoma,sans-serif;
 
