--- a/app/assets/stylesheets/user_forms.scss
+++ b/app/assets/stylesheets/user_forms.scss
@@ -35,6 +35,10 @@
     line-height: 2.0;
   }
 
+  input {
+    color:#000;
+  }
+
   p {
     margin-top: 10px;
   }
